# cd_rip

./: .gitignore  PKGBUILD  README.md  cd_rip.sh  rip.py  run.sh  setup.cfg  setup.py
rip_lib/: __main__.py  cddb.py  disc_info.py  discover.py  freedb.py  main.py  main_old.py  musicbrainz.py  ogg.py  rip_common.py
src/rip_lib/: __main__.py  discover.py  freedb.py  main.py  musicbrainz.py  ogg.py  rip_common.py
tests/: cddb.txt?cmd=cddb+read+pop+id&hello=bob+localhost+CDDB.py+1.4&proto=5  cddb.txt?query&hello&proto  mocks.py  test_cddb.py
