[metadata]
name = CD Rip
version = 1.0
description = Yet another script for ripping CDs
url = https://github.com/peter1010/cd_rip
author = Peter1010
author_email = peter1010@localnet
classifiers =
	Programming Language :: Python :: 3
   	License :: OSI Approved :: GPL
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
scripts =
	cd_rip.sh

[options.packages.find]
where = src
